finalized my portfolio, still missing pages and projects

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Gahdamn Portfolio</title>
+    <title>John Francis Espiritu | Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="icons/webicon.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,10 +46,13 @@
                 <p>Hi, I’m a 19-year-old Computer Science student at Ateneo de Naga University. I focus on frontend, web, and app development, creating functional and user-friendly digital solutions.</p>
             </span>
             <div class="socials-container">
-                <a href="https://google.com" target="_blank" class="linkedin"><img src="./icons/linkedin.svg" alt="linkedin"></a>
-                <a href="https://google.com" target="_blank" class="linkedin"><img src="./icons/github.svg" alt="github"></a>
-                <a href="https://google.com" target="_blank" class="linkedin"><img src="./icons/envelope-fill.svg" alt="email"></a>
-                <a href="https://google.com" target="_blank" class="linkedin"><img src="./icons/facebook.svg" alt="facebook"></a>
+                <a href="https://www.linkedin.com/in/john-francis-espiritu-b3187834a" target="_blank"><img src="./icons/linkedin.svg" alt="linkedin"></a>
+                <a href="https://github.com/Jeyep18" target="_blank"><img src="./icons/github.svg" alt="github"></a>
+                <a href="mailto:jfrancis.espiritu@gmail.com" target="_blank"><img src="./icons/envelope-fill.svg" alt="email"></a>
+                <a href="https://web.facebook.com/gwenclart" target="_blank"><img src="./icons/facebook.svg" alt="facebook"></a>
+                <span>
+                    <p>jfrancis.espiritu@gmail.com</p>
+                </span>
             </div>
         </div>
     </section>
@@ -56,9 +60,9 @@
     <section id="about-me" class="about-me">
         <div class="about-me-container">
             <h2>About Me</h2>
-            <p>I'm a Computer Science student at Ateneo de Naga University, passionate about frontend development, game design, and cybersecurity. I enjoy building interactive applications, crafting intuitive user experiences, and exploring security in tech.</p>
-            <p>I’ve worked on web and mobile apps, game development in Roblox (Lua), and Flutter-based projects. My goal is to create solutions that are functional, secure, and user-friendly.</p>
-            <p>Check out my projects or reach out if you'd like to collaborate.</p>
+            <p>I'm currently studying Computer Science at Ateneo de Naga University, i like making creative works and enjoy doing frontend, UI/UX development, graphic arts, and game environments. I'm also studying how to build interactive applications and web development.</p>
+            <p>I’ve worked on web and mobile apps, and game development in Roblox. My goal is to create solutions that are functional, secure, and user-friendly.</p>
+            <p>As of now I am still working on building a better portfolio (still, thanks for checking me out!).</p>
         </div>
         <div class="experiences-container">
             <h2>My Experiences</h2>
@@ -71,11 +75,11 @@
                 </div>
                 <div class="experiences">
                     <h3>Started Programming</h3>
-                    <h4>May 2024 - July 2024</h4>
-                    <p>I don’t know bro... I just started programming because I chose Computer Science as my course in Ateneo de Naga, hays poor planning fr.</p>
-                    <h3>Almost Deceased</h3>
-                    <h4>August 2024 - Present</h4>
-                    <p>Discrete, discrete, discrete. What a wonderful word, feels like my greatest fear and nightmare...</p>
+                    <h4>June 2024</h4>
+                    <p>I enrolled as a BS Computer Science in Ateneo de Naga University (AdNU), i didn't have much prior experience in coding other than html and css. However, I tried my best to study programming languages such as Python before college classes started.</p>
+                    <h3>Joined my first Convention! [PYCON APAC 2025]</h3>
+                    <h4>February 1 - February 2</h4>
+                    <p>Pycon was intoduced to me by my seniors in AdNU, it was my first ever convention where I got to learn and connect with other people in the same field as I am. The speakers gave us valuable insights and shared their knowledge using Python. Overall, it was a wonderful experience as a first year student, and i'll be looking forward to it every year.</p>
                 </div>
             </div>
         </div>
@@ -108,23 +112,62 @@
         <div class = "projects-container">
             <h2>My Projects</h2>
                 <div class="project-items">
-                    <div class="project-pic">project 1<div class="project-info">project info</div></div>
-                    <div class="project-pic">project 2<div class="project-info">project info</div></div>
+                    <a href="/project_pages/CondoEase-Project.html" target="_blank">
+                        <div class="project-pic">
+                            <div class="project-info">
+                                <h3>CondoEase Mobile App UI</h3>
+                                <span>
+                                    Simple app UI with functions using React Native & Expo.
+                                </span>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="/project_pages/CondoEase-Project.html" target="_blank">
+                        <div class="project-pic">
+                            <div class="project-info">
+                                <h3>Project 2</h3>
+                                <span>Description</span>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             <h2>My Personal Projects</h2>
                 <div class="project-items">
-                    <div class="project-pic">project 1<div class="project-info">project info</div></div>
-                    <div class="project-pic">project 2<div class="project-info">project info</div></div>
+                    <div class="project-pic">
+                        <div class="project-info">
+                            <h3>Project 1</h3>
+                            <span>Description...</span>
+                        </div>
+                    </div>
+                    <div class="project-pic">
+                        <div class="project-info">
+                            <h3>Project 2</h3>
+                            <span>Description...</span>
+                        </div>
+                    </div>
                 </div>
         </div>
     </section>
 
-    <section id="contact-me">
-        <h2>My Contact Information</h2>
+    <section id="contact-me" class="contact-me">
+        <div class="contact-me-container">
+            <h2>My Contact Information</h2>
+            <div class="contact-info">
+                <p><b>Email: </b>jfrancis.espiritu@gmail.com</p>
+                <p><b>Contact: </b>+63 993 869 1998 or +63 948 451 6446</p>
+            </div>
+            <div class="contact-socials">
+                <a href="https://www.linkedin.com/in/john-francis-espiritu-b3187834a" target="_blank"><img src="./icons/linkedin.svg" alt="linkedin"></a>
+                <a href="https://github.com/Jeyep18" target="_blank"><img src="./icons/github.svg" alt="github"></a>
+                <a href="mailto:jfrancis.espiritu@gmail.com" target="_blank"><img src="./icons/envelope-fill.svg" alt="email"></a>
+                <a href="https://web.facebook.com/gwenclart" target="_blank"><img src="./icons/facebook.svg" alt="facebook"></a>
+            </div>
+        </div>
     </section>
 
     <footer class="footer">
-        <h1>FOOTER</h1>
+        <h5>&copy;2025 John Francis Espiritu | Philippines</h5>
+        <h5>jfrancis.espiritu@gmail.com</h5>
     </footer>
 </body>
 </html>
