made it responsive (partially)

--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
             </a>
         </div>
         <div>
-            <nav class="nav">
-                <ul>
+            <button class="hamburger" id="hamburger">
+                ☰
+            </button>
+            <nav class="nav" id="nav">
+                <ul id="nav-list">
                     <li><a href="#main-profile">Home</a></li>
                     <li><a href="#about-me">About</a></li>
                     <li><a href="#projects">Projects</a></li>
@@ -169,5 +172,7 @@
         <h5>&copy;2025 John Francis Espiritu | Philippines</h5>
         <h5>jfrancis.espiritu@gmail.com</h5>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
